<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.funfactory.cangamemake.view.impl.CadastroExampleActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/White"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/text_menu"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/menu_text" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="@color/White"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:visibility="visible" >

            <Button
                android:id="@+id/botaoCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_option_1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="@color/White"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:visibility="visible" >

            <Button
                android:id="@+id/botaoListar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_option_2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="@color/White"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:visibility="visible" >

            <Button
                android:id="@+id/botaoRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_option_3" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>